fixed bug in pathname from old spark download

--- a/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-master-deploy.yaml
+++ b/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-master-deploy.yaml
@@ -43,7 +43,7 @@ spec:                     # This is the specification
             # the SPARK_HOME env set in docker image is not accessible for the command line
             # below. So had to set it here.
             - name: SPARK_HOME  
-              value: "/spark-3.1.1-bin-hadoop3.2"
+              value: "/spark-3.2.0-bin-hadoop3.2-scala2.13"
 
           command: ["$(SPARK_HOME)/sbin/start-master.sh"]
           args: ["--host", "spark-master-host"]  # provide the floating IP addr of the master VM
