--- a/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-worker-deploy.yaml
+++ b/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-worker-deploy.yaml
@@ -40,7 +40,7 @@ spec:                     # This is the specification where we can even put the 
             # the SPARK_HOME env set in docker image is not accessible for the command line
             # below. So had to set it here.
             - name: SPARK_HOME  
-              value: "/spark-3.1.1-bin-hadoop3.2"
+              value: "/spark-3.2.0-bin-hadoop3.2-scala2.13"
 
           imagePullPolicy: Always  # This forces the node to pull the image
           command: ["$(SPARK_HOME)/sbin/start-worker.sh"]
