--- a/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-driver-deploy.yaml
+++ b/Project4/Kubernetes Cluster/Spark_K8s_StandaloneCluster/spark-driver-deploy.yaml
@@ -35,7 +35,7 @@ spec:                     # This is the specification
             # the SPARK_HOME env set in docker image is not accessible for the command line
             # below. So had to set it here.
             - name: SPARK_HOME  
-              value: "/spark-3.1.1-bin-hadoop3.2"
+              value: "/spark-3.2.0-bin-hadoop3.2-scala2.13"
 
           ports:            # Spark driver port
             - containerPort: 4040  # the dashboard
