--- a/Project4/Kubernetes Cluster/tasks/playbook_setup_pods.yml
+++ b/Project4/Kubernetes Cluster/tasks/playbook_setup_pods.yml
@@ -6,33 +6,56 @@
   
   
   
-#   tasks: 
+#   tasks:
+
     - name: Git clone
       command: git -C $HOME/.kube clone https://github.com/lukegarrett/cloudHGH.git
     - name: start zk-svc
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/zk-svc.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/zk-svc.yaml
+
+    # BEGIN ZOOKEEPER KAFKA DEPLOYMENT
     
     - name: start zk-deployment
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/zookeeper-deployment.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/zookeeper-deployment.yaml
 
     - name: start master service
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/kb-master-svc.yaml  
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/kb-master-svc.yaml  
 
     - name: start master deployment
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/kb-master-deployment.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/kb-master-deployment.yaml
 
     - name: start worker service
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-svc.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-svc.yaml
 
     - name: start worker deployment
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-deployment.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-deployment.yaml
     
     - name: couch-service
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-svc.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/CouchDB/couch-svc.yaml
 
     - name: couch-deploy
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-deployment.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/CouchDB/couch-deployment.yaml
 
     - name: start consumer job
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
+
+    # BEGIN SPARK DEPLOYMENT
+
+    - name: start spark master service
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-master-svc.yaml
+
+    - name: start spark driver service
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-driver-svc.yaml
+
+    - name: start spark master deployment
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-master-svc.yaml
+
+    - name: start spark master deployment
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-master-deploy.yaml
+
+    - name: start spark worker deployment
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-worker-deploy.yaml
+
+    - name: start spark driver deployment
+      command: kubectl apply -f ~/.kube/cloudHGH/Project4/Kubernetes\ Cluster/container-deployment/Spark/spark-driver-deploy.yaml
 ...
