added java install

--- a/Project4/Kubernetes Cluster/container-deployment/Data-Read/dockerfile
+++ b/Project4/Kubernetes Cluster/container-deployment/Data-Read/dockerfile
@@ -14,6 +14,7 @@ FROM ubuntu:latest
 # Now install the needed python packages
 RUN apt-get -y update && apt-get install -y net-tools python3 gcc
 RUN apt-get install -y python3-dev python3-pip
+RUn apt-get install -y openjdk-8-jdk-headless
 RUN python3 -m pip install --upgrade pip
 RUN pip install kafka-python
 RUN pip install pyspark
