--- a/Project4/Kubernetes Cluster/container-deployment/Data-Read/mapreduce-deployment.yaml
+++ b/Project4/Kubernetes Cluster/container-deployment/Data-Read/mapreduce-deployment.yaml
@@ -4,15 +4,15 @@
 apiVersion: batch/v1
 kind: Job         # We are testing the Job resource type
 metadata:
-  name: consumer-job  # A name must be given to the Job type in the metadata section
+  name: mr-job  # A name must be given to the Job type in the metadata section
 spec:                     # This is the specification where we can even put the number of replicas
   template:               # Specified info needed to run the pod and what runs in the pod
     metadata:
       labels:
-        app: consumer        # some label to give to this pod (see the matching label above)
+        app: mr        # some label to give to this pod (see the matching label above)
     spec:                 # actual specification
       containers:
-      - name: consumer       # this is going to be used for DNS name
+      - name: mr       # this is going to be used for DNS name
         # Change the IP address to where you are running this
         image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
                                              # from all our workers
