--- a/final-project/container-deployment/tweet-stream/tweet-stream-deployment.yaml
+++ b/final-project/container-deployment/tweet-stream/tweet-stream-deployment.yaml
@@ -4,7 +4,7 @@
 apiVersion: batch/v1
 kind: Job         # We are testing the Job resource type
 metadata:
-  name: consumer-job  # A name must be given to the Job type in the metadata section
+  name: tweet-stream-job  # A name must be given to the Job type in the metadata section
 spec:                     # This is the specification where we can even put the number of replicas
   template:               # Specified info needed to run the pod and what runs in the pod
     metadata:
@@ -14,11 +14,11 @@ spec:                     # This is the specification where we can even put the 
       containers:
       - name: consumer       # this is going to be used for DNS name
         # Change the IP address to where you are running this
-        image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
+        image: camrenhall/cloudhgh:tweet-stream-image   # this is the image in registry accessible
                                              # from all our workers
         imagePullPolicy: Always  # This forces the node to pull the image
         command: ["python3"]
-        args: ["consumer.py"]  # arguments to run. I am running this for 1000
+        args: ["filtered_stream.py"]  # arguments to run. I am running this for 1000
                                                                                                        # iterations so that we have time to do an exec
                                                                                                        # and open a shell to the running pod
       restartPolicy: Never  # we ask Kubernetes not to restart
