added kubernetes deployment

--- a/Project3/Kubernetes Cluster/tasks/playbook_create_vms-notsetupfornewvms.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_create_vms-notsetupfornewvms.yml
@@ -1,11 +1,10 @@
----
-#
-# Author: Camren Hall, Luke Garrett, Safet Hoxha
-# EECS 4287/5287: Principles of Cloud Computing
-# Created: Fall 2021
-#
-# In this playbook we instantiate our Chameleon Cloud Virtual Machines
-#
+- hosts: MyLocalVMs
+  remote_user:  cc   # change the user to whatever is the user on the cloud VM
+  collections:   # this is new starting with Ansible 2.9 (akin to importing package)
+    - openstack.cloud
+  
+  
+  tasks:
 
   - name: Install Ansible module openstack.cloud
     ansible.builtin.command: ansible-galaxy collection install openstack.cloud
