--- a/Project3/Kubernetes Cluster/tasks/playbook_kubernetes_master.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_kubernetes_master.yml
@@ -1,11 +1,3 @@
----
-# - hosts: MyMasterNode
-#   remote_user:  cc   # change the user to whatever is the user on the cloud VM
-#   collections:   # this is new starting with Ansible 2.9 (akin to importing package)
-#     - openstack.cloud
-  
-  
-#   tasks:
   - name: changing cloud.cfg
     become: yes
     replace:
@@ -13,7 +5,12 @@
       regexp: 'manage_etc_hosts: true'
       replace: 'manage_etc_hosts: false'
   
-  
+  - name: Add vagrant user to docker group
+    become: yes
+    user:
+      name: vagrant
+      group: docker
+
   - name: Add Entry to Hosts File (MASTER)
     become: yes
     become_user: root
@@ -24,15 +21,15 @@
 
   - name: Disable swap
     command: swapoff -a
-  - name: Enable UFW TCP on 2379-2380S
+  - name: Enable UFW TCP on 2379-2380
 
     shell: "sudo ufw allow proto tcp from any to any port 2379:2380"
 
   - name: Enable UFW TCP on 4040
     shell: "sudo ufw allow proto tcp from any to any port 4040"
 
-  - name: Enable UFW TCP on 5000
-    shell: "sudo ufw allow proto tcp from any to any port 5000"
+  - name: Enable UFW TCP on 5984
+    shell: "sudo ufw allow proto tcp from any to any port 5984"
       
   - name: Enable UFW TCP on 6443
     shell: "sudo ufw allow proto tcp from any to any port 6443"
@@ -45,14 +42,22 @@
       
   - name: Enable UFW TCP on 8080:8081
     shell: "sudo ufw allow proto tcp from any to any port 8080:8081"
-  - name: Enable UFW TCP on 10250
-    shell: "sudo ufw allow proto tcp from any to any port 10250"
+
+  - name: Enable UFW TCP on 9092
+    shell: "sudo ufw allow proto tcp from any to any port 9092"
       
   - name: Enable UFW TCP on 10251
     shell: "sudo ufw allow proto tcp from any to any port 10251"
 
+  - name: Enable UFW TCP on 10251
+    shell: "sudo ufw allow proto tcp from any to any port 10257"
+
   - name: Enable UFW TCP on 10252
-    shell: "sudo ufw allow proto tcp from any to any port 10252"  
+    shell: "sudo ufw allow proto tcp from any to any port 10252"
+
+  - name: Enable UFW TCP on 10251
+    shell: "sudo ufw allow proto tcp from any to any port 10259"
+
   - name: Enable UFW TCP on 300000:30010
     shell: "sudo ufw allow proto tcp from any to any port 30000:30010"
 
@@ -71,13 +76,7 @@
     shell: "sudo ufw reload"    
 
   - name: Initialize the Kubernetes cluster using kubeadm
-    become: yes
-    command: kubeadm init --node-name kubemaster --pod-network-cidr=10.244.0.0/16
-    register: output
-
-  - name: display output   
-    debug: 
-      var: output.stdout_lines
+    command: sudo kubeadm init --node-name kubemaster --pod-network-cidr=10.244.0.0/16
 
   - name: mkdir
     shell: mkdir -p $HOME/.kube
@@ -91,6 +90,14 @@
   - name: display output   
     debug: 
       var: output.stdout_lines  
+  # - name: setup config mkdir
+  #   shell:  "mkdir -p /home/vagrant/.kube"
+  # - name: setup sudo cp /etc/kubernetes/admin.conf home/.kube/config
+  #   shell: "sudo cp /etc/kubernetes/admin.conf /home/vagrant/.kube/config"
+  # - name: sudo chown vagrant:docker home/.kube/config
+  #   shell: "sudo chown vagrant:docker home/.kube/config"
+  # - name: export
+  #   shell: "export KUBECONFIG=$HOME/admin.conf"
 
   - name: Setup the container networking provider and the network policy engine
     command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
@@ -105,4 +112,6 @@
   - name: Copy join command to local file
     local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
 
-...
+  - name: Git clone
+    command: git -C $HOME/.kube clone https://github.com/lukegarrett/cloudHGH.git
+
