--- a/Project3/Kubernetes Cluster/tasks/playbook_setup_pods.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_setup_pods.yml
@@ -1,14 +1,4 @@
----
-# - hosts: MyMasterNode
-#   remote_user:  cc   # change the user to whatever is the user on the cloud VM
-#   collections:   # this is new starting with Ansible 2.9 (akin to importing package)
-#     - openstack.cloud
-  
-  
-  
-#   tasks: 
-    - name: Git clone
-      command: git -C $HOME/.kube clone https://github.com/lukegarrett/cloudHGH.git
+
     - name: start zk-svc
       command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Master/zk-svc.yaml
     
@@ -24,15 +14,25 @@
     - name: start worker service
       command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-svc.yaml
 
-    - name: start worker deployment
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-deployment.yaml
+    # - name: start worker deployment
+    #   command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Broker-Worker/kb-worker-deployment.yaml
     
-    - name: couch-service
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-svc.yaml
+    # - name: couch-service
+    #   command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-svc.yaml
 
-    - name: couch-deploy
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-deployment.yaml
+    # - name: couch-deploy
+    #   command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/CouchDB/couch-deployment.yaml
 
-    - name: start consumer job
-      command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
-...
+    # - name: start consumer job
+    #   command: kubectl apply -f ~/.kube/cloudHGH/Project3/Kubernetes\ Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
+
+    - name: spark-driver-svc  
+      command: kubectl apply -f ~/.kube/cloudHGH/final-project/container-deployment/Spark/spark-driver-svc 
+    - name: spark-driver-deploy 
+      command: kubectl apply -f ~/.kube/cloudHGH/final-project/container-deployment/Spark/spark-driver-deploy
+    - name: spark-master-svc  
+      command: kubectl apply -f ~/.kube/cloudHGH/final-project/container-deployment/Spark/spark-master-svc
+    - name: spark-master-deploy  
+      command: kubectl apply -f ~/.kube/cloudHGH/final-project/container-deployment/Spark/spark-master-deploy
+    - name: spark-worker-deploy
+      command: kubectl apply -f ~/.kube/cloudHGH/final-project/container-deployment/Spark/spark-worker-deploy      
