renamed docker images for pull

--- a/final-project-deployment/container-deployment/Spark/spark-deploy.yaml
+++ b/final-project-deployment/container-deployment/Spark/spark-deploy.yaml
@@ -14,7 +14,7 @@ spec:                     # This is the specification where we can even put the 
       containers:
       - name: spark       # this is going to be used for DNS name
         # Change the IP address to where you are running this
-        image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
+        image: camrenhall/twitterspark:sparkimage   # this is the image in registry accessible
                                              # from all our workers
         imagePullPolicy: Always  # This forces the node to pull the image
         command: ["spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.2.0 final_engine.py"]
