--- a/final-project-deployment/container-deployment/Twitter_API/twitter-api-deploy.yaml
+++ b/final-project-deployment/container-deployment/Twitter_API/twitter-api-deploy.yaml
@@ -14,7 +14,7 @@ spec:                     # This is the specification where we can even put the 
       containers:
       - name: twitter       # this is going to be used for DNS name
         # Change the IP address to where you are running this
-        image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
+        image: camrenhall/twitterspark:twitterapi   # this is the image in registry accessible
                                              # from all our workers
         imagePullPolicy: Always  # This forces the node to pull the image
         command: ["python3"]
