--- a/final-project-deployment/container-deployment/Web-dashboard/webApp-deploy.yaml
+++ b/final-project-deployment/container-deployment/Web-dashboard/webApp-deploy.yaml
@@ -23,7 +23,7 @@ spec:                     # This is the specification where we can even put the 
         kubernetes.io/hostname: kubemaster
       containers:
       - name: webApp       # Used by DNS
-        image: bitnami/couchdb:latest   # this is the image name on hub.docker or if you have one locally. We use an older
+        image: camrenhall/twitterspark:dashboardimage  # this is the image name on hub.docker or if you have one locally. We use an older
                           # and then show how we can upgrade to newer version
         imagePullPolicy: Always
         command: ["python3"]
