--- a/final-project-deployment/container-deployment/Spark/dockerfile
+++ b/final-project-deployment/container-deployment/Spark/dockerfile
@@ -18,6 +18,13 @@ RUN python3 -m pip install --upgrade pip
 RUN pip install kafka-python
 RUN pip install CouchDB
 
+RUN wget https://dlcdn.apache.org/spark/spark-3.2.0/spark-3.2.0-bin-hadoop3.2-scala2.13.tgz
+RUN zcat spark-3.2.0-bin-hadoop3.2-scala2.13.tgz | tar xpof -
+
+ENV SPARK_HOME=/spark-3.2.0-bin-hadoop3.2-scala2.13
+ENV PATH=${PATH}:${SPARK_HOME}/sbin:${SPARK_HOME}/bin
+
+
 #
 # Next, copy our matrix inverse code into the container
 COPY *.py /
