--- a/final-project-deployment/container-deployment/Spark/dockerfile
+++ b/final-project-deployment/container-deployment/Spark/dockerfile
@@ -25,6 +25,10 @@ RUN apt-get -y install wget
 RUN wget https://dlcdn.apache.org/spark/spark-3.2.0/spark-3.2.0-bin-hadoop3.2-scala2.13.tgz
 RUN zcat spark-3.2.0-bin-hadoop3.2-scala2.13.tgz | tar xpof -
 
+COPY spark-env.sh /spark-3.2.0-bin-hadoop3.2-scala2.13/conf/
+COPY spark-worker.conf /spark-3.2.0-bin-hadoop3.2-scala2.13/conf/
+COPY spark-driver.conf /spark-3.2.0-bin-hadoop3.2-scala2.13/conf/
+
 ENV SPARK_HOME=/spark-3.2.0-bin-hadoop3.2-scala2.13
 ENV PATH=${PATH}:${SPARK_HOME}/sbin:${SPARK_HOME}/bin
 
