--- a/final-project-deployment/container-deployment/Spark/spark-driver-deploy.yaml
+++ b/final-project-deployment/container-deployment/Spark/spark-driver-deploy.yaml
@@ -27,7 +27,7 @@ spec:                     # This is the specification
         kubernetes.io/hostname: kubemaster
       containers:
         - name: spark-driver       # used to name container
-          image: camrenhall/myspark:latest   # this is the image in private registry
+          image: camrenhall/my-spark:latest   # this is the image in private registry
           imagePullPolicy: Always  # This forces the node to pull the image
           env:
             - name: SPARK_LOCAL_IP
