--- a/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-driver-deploy.yaml
+++ b/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-driver-deploy.yaml
@@ -27,7 +27,7 @@ spec:                     # This is the specification
         kubernetes.io/hostname: kubemaster
       containers:
         - name: spark-driver       # used to name container
-          image: sparkimage   # this is the image in private registry
+          image: sparkimage:latest  # this is the image in private registry
           imagePullPolicy: Never  # This forces the node to pull the image
           env:
             - name: SPARK_LOCAL_IP
