--- a/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-master-deploy.yaml
+++ b/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-master-deploy.yaml
@@ -27,7 +27,7 @@ spec:                     # This is the specification
         kubernetes.io/hostname: kubemaster
       containers:
         - name: spark-master       # used to name container
-          image: sparkimage   # this is the image in private registry
+          image: sparkimage:latest  # this is the image in private registry
           imagePullPolicy: Never  # This forces the node to pull the image
           ports:            # Spark master port
             - containerPort: 7077  # inside it listens on this port
