--- a/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-worker-deploy.yaml
+++ b/final-project-deployment/container-deployment/SparkLocalDockerImage/spark-worker-deploy.yaml
@@ -24,7 +24,7 @@ spec:                     # This is the specification where we can even put the 
       hostname: spark-worker-host  # we need it to set the SPARK_LOCAL_IP
       containers:
         - name: spark-worker       # used to name container
-          image: sparkimage   # this is the image in private registry
+          image: sparkimage:latest   # this is the image in private registry
           imagePullPolicy: Never   # this is the image in private registry
           ports:            # Spark worker port
             - containerPort: 7078  # worker will use this port instead of random port
